<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ContainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/pad_10dp"
        android:background="@color/amber_700"
        android:padding="@dimen/pad_10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/txtMonthYear"
            style="@style/font2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="Jan,2016"
            android:textColor="@color/colorH"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contain_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/contain_calendar"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pad_2dp"
            android:orientation="vertical"
            android:padding="@dimen/pad_20dp">

            <TextView
                android:id="@+id/txtNumDate"
                style="@style/font2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="29"
                android:textColor="@color/colorA"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtDate"
                style="@style/font2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="Mon"
                android:textColor="@color/colorA"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contain_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/contain_header"
            android:background="@color/colorH"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/pad_5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/pad_10dp">

                <TextView
                    android:id="@+id/txtSubject"
                    style="@style/font23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/pad_2dp"
                    android:gravity="center_horizontal"
                    android:text="@string/subjectE"/>

                <TextView
                    android:id="@+id/txtChapter"
                    style="@style/font9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/pad_2dp"
                    android:text="@string/charpter"
                    android:textColor="@color/colorC" />

                <TextView
                    android:id="@+id/txtExercise"
                    style="@style/font9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/pad_2dp"
                    android:layout_toLeftOf="@+id/txtScore"
                    android:layout_toRightOf="@+id/txtChapter"
                    android:text="@string/label_exercise"
                    android:textColor="@color/colorC" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>